--- a/nuitka/tools/specialize/templates/HelperOperationInplace.c.j2
+++ b/nuitka/tools/specialize/templates/HelperOperationInplace.c.j2
@@ -15,7 +15,7 @@
 {#     See the License for the specific language governing permissions and      #}
 {#     limitations under the License.                                           #}
 {#                                                                              #}
-static bool _BINARY_OPERATION_{{op_code}}_{{left.getHelperCodeName()}}_{{right.getHelperCodeName()}}_INPLACE({{left.getVariableDecl("*operand1")}}, {{right.getVariableDecl("operand2")}}) {
+static inline bool _BINARY_OPERATION_{{op_code}}_{{left.getHelperCodeName()}}_{{right.getHelperCodeName()}}_INPLACE({{left.getVariableDecl("*operand1")}}, {{right.getVariableDecl("operand2")}}) {
     assert(operand1); // Pointer must be non-null.
 
     {{left.getCheckValueCode("*operand1")}}
@@ -24,13 +24,21 @@ static bool _BINARY_OPERATION_{{op_code}}_{{left.getHelperCodeName()}}_{{right.g
 {# CPython2 treats integer values with fast path. #}
 {% if left.mayBothHaveType(right, "int") %}
 #if PYTHON_VERSION < 300
-{% if left.type_name == "int" == right.type_name %}
-    {
-        PyObject *result = _BINARY_OPERATION_{{op_code}}_OBJECT_INT_INT(*operand1, operand2);
+    if ({{left.getIntCheckExpression("*operand1")}} && {{right.getIntCheckExpression("operand2")}}) {
+        {% import 'HelperSlotsInt.c.j2' as int_slots %}
+
+        PyObject *result;
+        PyObject *op1 = *operand1;
+
+        {{ int_slots.int_slot(operator, nb_slot, object_desc, int_desc, int_desc, "result", "op1", "operand2", "exit_result", "exit_result_ok", "exit_result_exception") }}
+
+        exit_result:
 
         if (unlikely(result == NULL)) {
             return false;
         }
+
+        exit_result_ok:
 
         // We got an object handed, that we have to release.
         Py_DECREF(*operand1);
@@ -40,12 +48,11 @@ static bool _BINARY_OPERATION_{{op_code}}_{{left.getHelperCodeName()}}_{{right.g
         *operand1 = result;
 
         return true;
+
+{# Not all operations have defined a definite exception exit, so this can be unused #}
+        exit_result_exception:
+        return false;
     }
-{% else %}
-    if ({{left.getIntCheckExpression("*operand1")}} && {{right.getIntCheckExpression("operand2")}}) {
-        return _BINARY_OPERATION_{{op_code}}_INT_INT_INPLACE(operand1, operand2);
-    }
-{% endif %}
 #endif
 {% endif %}
 
